--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Zone</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div>
-        <h1>Bem vindo ao nosso blog, Dark Zone.</h1>
+        <h1>Welcome to our blog, Dark Zone.</h1>
     </div>
-    
 </body>
 </html>
