Set Trending in the header to page gentoo, just for testing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#home" class="header_content">Home</a></li>
                     <li><a href="#about" class="header_content">About</a></li>
                     <li><a href="#contact" class="header_content">Contact</a></li>
-                    <li><a href="#trending" class="header_content">Trending</a></li>
+                    <li><a href="./pages/gentoo.html" class="header_content">Trending</a></li>
                 </ul>
             </nav>
         </div>
