--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Zone</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <header class="menu">
-        <div class="central">
-            <div class="logo">
-                <a href="#home">
-                    <img class="header_image" src="assets/images/fleur-de-lis.png" alt="logo"/>
-                </a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Dark Zone</title>
+        <link rel="stylesheet" href="./css/reset.css" />
+        <link rel="stylesheet" href="./css/header.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <header class="menu">
+            <div class="central">
+                <div class="logo">
+                    <a href="#home">
+                        <img class="header_image" src="assets/images/fleur-de-lis.png" alt="logo" />
+                    </a>
+                </div>
+                <nav class="header_menu">
+                    <ul class="header_list">
+                        <li><a href="#home" class="header_content">Home</a></li>
+                        <li><a href="#about" class="header_content">About</a></li>
+                        <li><a href="#contact" class="header_content">Contact</a></li>
+                        <li><a href="./pages/gentoo.html" class="header_content">Trending</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="header_menu">
-                <ul class="header_list">
-                    <li><a href="#home" class="header_content">Home</a></li>
-                    <li><a href="#about" class="header_content">About</a></li>
-                    <li><a href="#contact" class="header_content">Contact</a></li>
-                    <li><a href="./pages/gentoo.html" class="header_content">Trending</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-    <div class="lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </main>
-</body>
+        </header>
+        <main>
+            <div class="lines">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </main>
+    </body>
 </html>
