--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/homepage.css">
 </head>
 <body>
     <header class="menu">
@@ -28,11 +29,21 @@
         </div>
     </header>
     <main>
-    <div class="lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
+        <section class="background">
+            <div class="lines">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </section>
+        <section id="homepage">
+            <nav class="adjust">
+                <p class="search">I want search about...</h1>
+                <input class="search_field" placeholder="Enter keywords">
+                <button class="search_submit"><span>Search</span></button>
+            </nav>
+        </section>
+    </section>
     </main>
 </body>
 </html>
