--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/homepage.css">
 </head>
 <body>
@@ -36,10 +37,10 @@
                 <div class="line"></div>
             </div>
         </section>
-        <section id="homepage">
+        <section id="search">
             <nav class="adjust">
-                <p class="search">I want search about...</h1>
-                <input class="search_field" placeholder="Enter keywords">
+                <p class="search_text">I want search about...</h1>
+                <input type="text" class="search_field" placeholder="Enter keywords">
                 <button class="search_submit"><span>Search</span></button>
             </nav>
         </section>
