--- a/pages/gentoo.html
+++ b/pages/gentoo.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div class="container">
+      <h1 class="title">Gentoo Quick Installation Guide</h1>
       <p class="disclaimer">Disclaimer: This is not an official guide to installing Gentoo. This is a short guide made for those who want a quick install and have knowledge about how Gentoo works.</p>
-      <h1>Introduction</h1>
+      <h3 class="title">Introduction</h3>
       <p>
         This is a guide <em>I would use</em> for installing Gentoo with systemd
         <a href="https://www.freedesktop.org/wiki/Software/systemd/TheCaseForTheUsrMerge/">(merged-usr)</a>
