Created the part of news/trending and fix some bugs/problems

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="./css/header.css">
       <link rel="stylesheet" href="./css/styles.css">
       <link rel="stylesheet" href="./css/search.css">
-      <link rel="stylesheet" href="./css/homepage.css">
+      <link rel="stylesheet" href="./css/news.css">
   </head>
   <body>
       <header class="menu">
@@ -44,7 +44,18 @@
                   <button class="search_submit"><span>Search</span></button>
               </nav>
           </section>
-      </section>
+        <section class="news">
+            <div class="news_adjust">
+                <p class="news_text">NEWS</p>
+                <article class="">
+                    <div class="news_image">
+                        <a class="news_image_link" href="">
+                            <img class="news_image_post" src="">
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </section>
       </main>
   </body>
 </html>
