Created the first news and put on a description/title/image

--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
                 <p class="news_text">NEWS</p>
                 <article class="">
                     <div class="news_image">
-                        <a class="news_image_link" href="">
-                            <img class="news_image_post" src="">
+                        <a class="news_image_link" href="./pages/gentoo.html">
+                            <img class="news_image_post" src="assets/images/gentoo.svg">
                         </a>
+                        <div class="news_adjust_text">
+                            <h2 class="news_title_post">Gentoo Quick Installation Guide</h2>
+                            <br>
+                            <p class="news_text_post"> This is a guide I would use for installing Gentoo with systemd (merged-usr) as the init system of choice to the amd64 architecture (uefi). </p>
+                        </div>
                     </div>
                 </article>
             </div>
