Adjust spaces, add a href in the title

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                             <img class="news_image_post" src="assets/images/gentoo.svg">
                         </a>
                         <div class="news_adjust_text">
-                            <h2 class="news_title_post">Gentoo Quick Installation Guide</h2>
+                            <a class="news_image_link" href="./pages/gentoo.html">
+                                <h2 class="news_title_post">Gentoo Quick Installation Guide</h2>
+                            </a>
                             <p class="news_text_post"> This is a guide I would use for installing Gentoo with systemd (merged-usr) as the init system of choice to the amd64 architecture (uefi). </p>
                             <p class="news_autor_post">By Jabuxas, December 9, 2022</p>
                         </div>
