--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                             <img class="news_image_post" src="assets/images/gentoo.svg">
                         </a>
                         <div class="news_adjust_text">
-                            <a class="news_image_link" href="./pages/gentoo.html">
-                                <h2 class="news_title_post">Gentoo Quick Installation Guide</h2>
-                            </a>
+                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/gentoo.html">Gentoo Quick Installation Guide</a></h2>
                             <p class="news_text_post"> This is a guide I would use for installing Gentoo with systemd (merged-usr) as the init system of choice to the amd64 architecture (uefi). </p>
                             <p class="news_autor_post">By Jabuxas, December 9, 2022</p>
                         </div>
