News articles/posts add for testings

--- a/index.html
+++ b/index.html
@@ -59,6 +59,30 @@
                         </div>
                     </div>
                 </article>
+                <article class="">
+                    <div class="news_image">
+                        <a class="news_image_link" href="./pages/html.html">
+                            <img class="news_image_post" src="assets/images/html.png">
+                        </a>
+                        <div class="news_adjust_text">
+                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/html.html">Basic of HTML Guide</a></h2>
+                            <p class="news_text_post"> This is a guide about how to use the basics syntax of the HTML and how you can learn to use it in your projects.</p>
+                            <p class="news_autor_post">By Akyua, December 9, 2022</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="">
+                    <div class="news_image">
+                        <a class="news_image_link" href="./pages/arch.html">
+                            <img class="news_image_post" src="assets/images/arch.png">
+                        </a>
+                        <div class="news_adjust_text">
+                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/arch.html">Arch Linux Quick Installation Guide</a></h2>
+                            <p class="news_text_post"> How to install arch linux in the easy and quickly way. </p>
+                            <p class="news_autor_post">By Jabuxas, December 9, 2022</p>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
       </main>
