--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
                         </div>
                     </div>
                 </article>
+                <article class="">
+                    <div class="news_image">
+                        <a class="news_image_link" href="./pages/css.html">
+                            <img class="news_image_post" src="assets/images/css.svg">
+                        </a>
+                        <div class="news_adjust_text">
+                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/css.html">Basic of CSS to Work Guide</a></h2>
+                            <p class="news_text_post"> Easy guide to learn the basic structures about CSS and how you'll utilize it in your projects. </p>
+                            <p class="news_autor_post">By Akyua, December 9, 2022</p>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
       </main>
