Created footer and start develop it

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="./css/styles.css">
       <link rel="stylesheet" href="./css/search.css">
       <link rel="stylesheet" href="./css/news.css">
+      <link rel="stylesheet" href="./css/footer.css">
   </head>
   <body>
       <header class="menu">
@@ -98,5 +99,11 @@
             </div>
         </section>
       </main>
+      <footer class="footer">
+        <div class="footer_adjust">
+            <nav class="footer_developers">
+                <p class="footer_text">Developed by: <a href=https://github.com/akyua class="footer_link">Akyua</a> and <a href=https://github.com/jabuxas class="footer_link">Jabuxas</a></p>
+            </nav>
+    </footer>
   </body>
 </html>
