Adjust text news

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </section>
         <section class="news">
             <div class="news_adjust">
-                <p class="news_text">NEWS</p>
+                <p class="news_text">News</p>
                 <article class="">
                     <div class="news_image">
                         <a class="news_image_link" href="./pages/gentoo.html">
