--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <nav class="footer_developers">
                 <p class="footer_text">Developed by: <a href=https://github.com/akyua class="footer_link">Akyua</a> and <a href=https://github.com/jabuxas class="footer_link">Jabuxas</a></p>
             </nav>
+            <p class="copyright">&copy; Copyright DarkZone Blog - 2022</p>
     </footer>
   </body>
 </html>
