Add transition w/ scale in news-image/news-box

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="news">
             <div class="news_adjust">
                 <p class="news_text">News</p>
-                <article class="">
+                <article class="news_box">
                     <div class="news_image">
                         <a class="news_image_link" href="./pages/gentoo.html">
                             <img class="news_image_post" src="assets/images/gentoo.svg">
